wip: update solver constructor
Signed-off-by: p-arvy <pierre.arvy@artelys.com>